# retemplar

./: .mise.toml  CLAUDE.md  README.md  pyproject.toml
docs/: design-doc.md
src/retemplar/: blockprotect.py  cli.py  core.py  lockfile.py  schema.py  utils.py
src/retemplar/utils/: blockprotect.py  fs_utils.py  merge_utils.py
tests/: test_block_protection.py  test_cli.py  test_deletions.py  test_lockfile.py  test_plan_apply.py  test_precedence.py  test_render_rules.py  test_schema.py
