[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retemplar"
version = "0.0.1"
description = "Repo-as-Template (RAT) engine with lockfile and incremental upgrades."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Harrison" },
]

dependencies = [
  "typer>=0.12.3",     # CLI framework
  "rich>=13.7.1",      # Pretty output
  "httpx>=0.27.0",     # GitHub API calls
  "GitPython>=3.1.43", # Local git ops
  "PyYAML>=6.0.1",     # YAML parsing
  "tomlkit>=0.12.5",   # TOML parsing/editing
  "pathspec>=0.12.1",  # gitignore-style matching
  "packaging>=24.1",   # version handling
  "pydantic>=2.5.0",  # Schema validation
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
retemplar = "retemplar.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/retemplar"]

[tool.toolbelt]
include= ['@toolbelt:resources/presets/python-hdw.yaml']